# golem-gpt

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: publish-dockerhub.yml  publish-pypi.yml
golemgpt/: __main__.py  settings.py  types.py
golemgpt/actions/: __init__.py  ask_google.py  ask_human_input.py  create_python_script.py  create_shell_script.py  delegate_job.py  explain.py  finish_job.py  get_datetime.py  get_local_date.py  get_os_details.py  http_download.py  http_request.py  read_file.py  reject_job.py  run_script.py  search_images_via_bing.py  search_text_via_bing.py  search_text_via_brave.py  summarize_file.py  write_file.py
golemgpt/codex/: __init__.py  base.py  reasonable.py  unaware.py
golemgpt/cognitron/: __init__.py  base.py  openai.py  openai_plain.py
golemgpt/golems/: __init__.py  _defs.py  director.py  general.py  lexicon.py
golemgpt/handlers/: base.py  extract_images.py  extract_links.py  http_download.py  search_text_via_brave_action.py
golemgpt/lexicon/: __init__.py  base.py  general.py  prompts.py
golemgpt/memory/: __init__.py  base.py  localfiles.py
golemgpt/runners/: __init__.py  alwaysask.py  base.py  justdo.py
golemgpt/utils/: __init__.py  console.py  dialog.py  environ.py  exceptions.py  http.py  misc.py
gptgolem/: __main__.py  settings.py
gptgolem/actions/: README.md  __init__.py  ask_google.py  ask_human.py  ask_human_input.py  create_python_script.py  explain.py  finish_job.py  get_datetime.py  (+7 more)
(+27 files in other folders)
